# flavent

./: .gitignore  AGENTS.md  BRIDGE_PYTHON_SUMMARY.md  COMPILER.md  DOCS.md  FLM_SPEC.md  PLAN.md  PLAN_GRAMMAR_STRUCTURE.md  PLAN_OPTIMIZE.md  PLAN_STDLIB_EXPANSION.md  README.md  REF1.md  REF2.md  REF3.md  REF4.md  REF5.md  REF6.md  REF7.md  REF8.md  pyproject.toml  tmp_mixin.flv
docs/: README.md  bridge_usage_baseline.json  bridge_usage_baseline.md  grammar_ebnf.md  grammar_pain_points.md  mixin_expansion_plan.md  mixin_hooks.md  perf_baseline.md  release_notes.md  stdlib_api_checklist.md  stdlib_api_ownership.md  stdlib_bridge_boundary_allowlist.json  stdlib_duplicate_allowlist.json  stdlib_duplicate_defs.json  stdlib_duplicate_defs.md  warning_baseline.json  warning_catalog.md
examples/: 01_pure_fn.flv  02_pipe.flv  03_result_try.flv  04_option_try.flv  05_handler_try_abort.flv  06_match_option.flv  07_sector_local_calls.flv  08_rpc_call_emit.flv  09_for_yield.flv  10_if_else.flv  11_match_result.flv  12_priority_scheduler.flv  13_stack_undo_log.flv  14_cli_env_process_runner.flv  15_csv_json_ingestion.flv  16_url_http_request_builder.flv  17_datetime_path_pipeline.flv  18_regex_alert_router.flv  19_mixin_hook_chain.flv  20_mixin_cancelable_override.flv  21_flvrepr_metadata_workflow.flv  22_multi_collection_orchestrator.flv  23_resilient_result_option_flow.flv  24_hash_base64_pipeline.flv  25_struct_packet_roundtrip.flv  26_socket_peer_flow.flv  27_http_query_matrix.flv  28_datetime_csv_report.flv  29_log_policy_router.flv  30_env_profile_merge.flv  bank_system.flv  (+10 more)
(+318 files in other folders)
