[project]
name = "flavent"
version = "0.0.0"
description = "flavent compiler (Phase 1: lexer/parser/AST)"
requires-python = ">=3.10"

[tool.pytest.ini_options]
testpaths = ["tests", "tests_flv"]
markers = [
  "integration: cross-module and stdlib integration tests",
  "e2e: end-to-end language behavior tests",
]
